[SAFRAN-1242] Add capacity to load global security rule on all operations